# selfie-v3

./: .gitignore  Cargo.toml  README.md  dprint.jsonc  repomix.config.json  selfie-blueprint.md  selfie-implementation-steps.md  selfie-output-spec.md  selfie-spec.md  selfie-todo-continued.md  selfie-todo.md
examples/: progress_display_example.rs
src/: adapters.rs  cli.rs  command.rs  config.rs  domain.rs  filesystem.rs  graph.rs  installation.rs  lib.rs  main.rs  package.rs  package_installer.rs  package_list_command.rs  package_repo.rs  package_validate_command.rs  package_validator.rs  ports.rs  progress.rs  progress_display.rs  services.rs
src/adapters/: cli.rs  command.rs  config.rs  filesystem.rs  progress.rs  user_interface.rs
src/adapters/cli/: clap_adapter.rs
src/adapters/command/: output_buffer.rs  shell.rs
src/adapters/config/: yaml_config_loader.rs
src/adapters/config_loader/: yaml.rs
src/adapters/package_repo/: yaml.rs
src/adapters/user_interface/: clap_cli.rs
src/domain/: config.rs  dependency.rs  errors.rs  installation.rs  package.rs  progress.rs  validation.rs
src/domain/application/: commands.rs
src/domain/config/: app_config.rs  (+3 more)
src/package_installer/: dependency.rs
src/ports/: application.rs  command.rs  config_loader.rs  filesystem.rs  package_repo.rs  progress.rs
src/services/: application_command_service.rs  command.rs  command_validator.rs  enhanced_error_handler.rs  error_formatter.rs  multi_package_installation_service.rs  package.rs  package_installation_service.rs  package_installer.rs  package_list_service.rs  package_validation_command.rs  package_validation_service.rs  package_validator.rs  suggestion_provider.rs  validation_command.rs  validation_service.rs
tests/: error_handling_test.rs  integration_test.rs  progress_integration_test.rs  validation_integration_test.rs
(+8 files in other folders)
