[package]
name = "selfie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
config = { version = "0.15.9", features = ["yaml"] }
console = "0.15.10"
etcetera = "0.10.0"
indicatif = "0.17.11"
jiff = "0.2.1"
mockall = "0.13.1"
num_cpus = "1.16.0"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
strsim = "0.11.1"
thiserror = "2.0.11"
url = "2.5.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.17.1"
